--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# H2 Database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:dcbapp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#debug=true
+# logging level
+logging.level.org.springframework=ERROR
+logging.level.com.mkyong=DEBUG
 
+# output to a file
+logging.file=app.log
+
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
